--- a/style.css
+++ b/style.css
@@ -38,14 +38,24 @@
 
 .popup {
   width: 400px;
-  background-color: #fff;
+  background-color: transparent;
+
   border-radius: 6px;
-  /* position: absolute; */
-  /* top: 50%;
+  position: absolute;
+  top: 0;
   bottom: 50%;
-  transform: translate(-50%, -50%); */
+  transform: translate(-50%, -50%) scale(0.1);
   text-align: center;
   padding: 10px 30px 30px;
+  visibility: hidden;
+  transition: transform 0.4s, top 0.4s;
+}
+
+/* this style will be added by js onclick: will change the previous style in .popup */
+.open-popup {
+  visibility: visible;
+  top: 50%;
+  transform: translate(-50%, -50%) scale(1);
 }
 
 .popup .icon {
@@ -55,6 +65,8 @@
   background-color: green;
   border-radius: 50%;
   position: relative;
+  margin-top: -50px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.4);
 }
 .popup .icon i {
   color: #fff;
@@ -62,4 +74,23 @@
   top: 25%;
   left: 32%;
   font-size: 50px;
+}
+
+.popup h2 {
+  font-size: 38px;
+  font-weight: 500;
+  margin: 30px 0 10px;
+}
+
+.popup button {
+  width: 100%;
+  margin-top: 40px;
+  padding: 10px 0;
+  background-color: var(--primary-color);
+  color: var(--text-color);
+  font-size: 18px;
+  border: 0;
+  outline: none;
+  border-radius: 4px;
+  box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
 }
